# AsciiRename

./: CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml  pr.yml  pub.yml
libs/anyascii/: CMakeLists.txt  anyascii.c  anyascii.h  utf8.c  utf8.h
libs/libpu8/: CMakeLists.txt  libpu8.cpp  libpu8.h
scripts/: Licenses.txt
src/: helpers.cpp  helpers.h  main.cpp
